Intro to vectorizing, Numba, and Cython

--- a/speed.ipynb
+++ b/speed.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Numpa\n",
+    "#### 2. Numba\n",
     "\n",
     "When possible, it is always a good idea to vectorize your code. But some problems are harder to vectorize. For example, let's try to generate the trajectory of the following difference equation:\n",
     "\n",
